fix figure caption on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -155,4 +155,7 @@ figcaption {
     margin-right: auto;
     text-align: justify;
   }
+  figcaption {
+    font-size: 10pt;
+  }
 }
